@@ -45,6 +45,7 @@ $(document).delegate('body', 'tabbedview.unknownresponse', function(event, overv
  * to the new gever-ui.
  */
 function switchUI(){
+  setTourAsSeen('be_new_frontend_teaser');
   var pathname = new URL($('body').data('portal-url')).pathname;
   Cookies.set('geverui', '1', {path: pathname, expires: 365});
   window.location.reload(true);
