@@ -54,3 +54,4 @@ Main file for all gever styles.
 @import "partials/sharing";
 @import "partials/wizard";
 @import "partials/webactions";
+@import "partials/teaser";
