@@ -47,8 +47,11 @@
 
   /* @group header */
 
-  #header {
+  #teaser-wrapper {
     margin-top: 53px;
+  }
+
+  #header {
     z-index: 10;
   }
   #banner-image {
