@@ -17,6 +17,7 @@
       <div class="contentWrapper">
         <div id="timetracker-wrapper" />
         <div id="header-wrapper" class="clearfix">
+          <div id="teaser-wrapper"></div>
           <div id="header" class="fixedWidth">
             <div id="banner-image" class="cell position-0 width-16"></div>
             <div class="headerTop row">
