@@ -5,6 +5,7 @@ Changelog
 ---------------------
 
 - Add question for `administrator_group` to the policy template. [mbaechtold]
+- Add teaser viewlet to promote the new frontend. [tinagerber]
 
 
 2020.4.0 (2020-07-02)
